# hand_eye_calibration

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  params.txt
3rdParties/ur_rtde/include/ur_rtde/: rtde_utility.h
3rdParties/ur_rtde/lib/: librtde.so.1.5
eye_in_hand/: CMakeLists.txt
eye_in_hand/include/: calibration.h  calibration_in_hand.h
eye_in_hand/src/: calibration.cpp  calibration_in_hand.cpp
eye_in_hand/test/: freedriver.cpp  test_calibration.cpp  test_calibration_in_hand.cpp
eye_to_hand/: CMakeLists.txt
eye_to_hand/include/: calibration_to_hand.h
eye_to_hand/src/: calibration_to_hand.cpp
eye_to_hand/test/: test_calibration_to_hand.cpp
